examples/test/testpolicy10169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10169
  namespace: namespace209
spec:
  podSelector:
    matchLabels:
      key49: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
      podSelector:
        matchLabels:
          key35: value24
          key22: value7
          key49: value47
